--- a/LAB6/Lab6_task7.ipynb
+++ b/LAB6/Lab6_task7.ipynb
@@ -6,7 +6,7 @@
       "name": "Lab6-task7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN4pFb1GFDLwt4359hfdDlB",
+      "authorship_tag": "ABX9TyPwdtnJIZwGVP8le4fI45j7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -388,6 +388,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gxauZgrU7ONK"
+      },
+      "source": [
+        "The countries with high life expectancy and high income are developed countries. The countries with lower income and life expectancy when compared to developed countries are developing countries and the countries with less income and life expectancy are under developing countries."
       ]
     }
   ]
